objects/A1_RewardTypes__mdt.object
<CustomObject>
    <description>Purpose of this MDT is to store the reward type vs reward description mapping per each brand.</description>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RewardType__c</fullName>
        <label>RewardType</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>A1_RewardTypes</label>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BrandId__c</columns>
        <columns>RewardType__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllRecords</label>
    </listViews>
    <pluralLabel>A1_RewardTypes</pluralLabel>
</CustomObject>